tests/ui/form_data_from_str_and_trait.stderr
error[E0034]: multiple applicable items in scope
   --> $DIR/form_data_from_str_and_trait.rs:29:10
    |
29  | #[derive(FormData)]
    |          ^^^^^^^^ multiple `convert_byte_stream` found
    |
note: candidate #1 is defined in an impl of the trait `CustomConvert` for the type `CustomType`
   --> $DIR/form_data_from_str_and_trait.rs:22:2
    |
22  |     fn convert_byte_stream(_name: &'a str, mut stream: ByteStream<E>) -> ConversionFuture<'a, Self, E> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: candidate #2 is defined in an impl of the trait `gotham_formdata::conversion::ConvertFromStr` for the type `T`
note: candidate #3 is defined in the trait `gotham_formdata::conversion::ConvertRawBytes`
   --> $DIR/conversion.rs:100:2
    |
100 |     fn convert_byte_stream(name: &'a str, stream: ByteStream<Err>) -> ConversionFuture<'a, Self, Err>;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: disambiguate the associated function for candidate #1
    |
29  | #[derive(CustomConvert::convert_byte_stream)]
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: disambiguate the associated function for candidate #2
    |
29  | #[derive(gotham_formdata::conversion::ConvertFromStr::convert_byte_stream)]
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: disambiguate the associated function for candidate #3
    |
29  | #[derive(gotham_formdata::conversion::ConvertRawBytes::convert_byte_stream)]
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
